my second commit

--- a/home.html
+++ b/home.html
@@ -41,7 +41,7 @@ level button</button><br>--></div></div>
   </tr>
   <tr>
     <td>&nbsp;</td>
-    <td><img src="img/internet-icon.png" /> &nbsp;<a href="http://cv-hutkan-tan.herokuapp.com">eurocv-hidayetutkan-tan.herokuapp.com</a></td>
+    <td><img src="img/internet-icon.png" /> &nbsp;<a href="http://cv-hutkan-tan.herokuapp.com">http://cv-hutkan-tan.herokuapp.com</a></td>
   </tr>
   <tr>
     <td>&nbsp;</td>
